# catos

./: Cargo.toml  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  test.rs  vga_buffer.rs
src/drivers/: vga_buffer.rs
src/lib/: allocator.rs  mod.rs
src/lib/drivers/: serial.rs
tests/: basic_boot.rs  should_panic.rs
