[package]
name = "cat_os"
version = "0.1.0"
edition = "2018"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
uart_16550 = "0.2.0"
linked_list_allocator = "0.9.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
]
test-success-exit-code = 33

# test-success-exit-code = 33
# This broke everything, so tests wouldnt run
# It will say test failed but just look at test logs
